--- a/index.html
+++ b/index.html
@@ -85,26 +85,26 @@ body {
 		<div class="player-sources">
 			<ul id="sourceList">
 				<!-- France Inter -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/franceinter/all/franceinterhautdebit.mp3" >France Inter (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/franceinter/all/franceinter-32k.mp3" >France Inter (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11008/franceinter-midfi128.mp3" >France Inter (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11009/franceinter-lofi32.mp3" >France Inter (LQ)</li>
 				<!-- France Info -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/franceinfo/all/franceinfo.mp3" >France Info (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/franceinfo/all/franceinfo-32k.mp3" >France Info (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11006/franceinfo-midfi128.mp3" >France Info (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11007/franceinfo-lofi32.mp3" >France Info (LQ)</li>
 				<!-- France Culture -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/franceculture/all/franceculturehautdebit.mp3" >France Culture (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/franceculture/all/franceculture-32k.mp3" >France Culture (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11010/franceculture-midfi128.mp3" >France Culture (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11011/franceculture-lofi32.mp3" >France Culture (LQ)</li>
 				<!-- France Musique -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/francemusique/all/francemusiquehautdebit.mp3">France Musique (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/francemusique/all/francemusique-32k.mp3">France Musique (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11012/francemusique-midfi128.mp3">France Musique (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11013/francemusique-lofi32.mp3">France Musique (LQ)</li>
 				<!-- FIP -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/fip/all/fiphautdebit.mp3">FIP (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/fip/all/fip-32k.mp3">FIP (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11016/fip-midfi128.mp3">FIP (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11017/fip-lofi32.mp3">FIP (LQ)</li>
 				<!-- Le Mouv' -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/lemouv/all/lemouvhautdebit.mp3">Le Mouv' (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/lemouv/all/lemouv-32k.mp3">Le Mouv' (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11014/mouv-midfi128.mp3">Le Mouv' (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11015/mouv-lofi32.mp3">Le Mouv' (LQ)</li>
 				<!-- France Bleu Ile-de-France -->
-				<li class="HQ audiosource" data-src="http://mp3.live.tv-radio.com/fbidf/all/fbidfhautdebit.mp3">France Bleu Ile-de-France (HQ)</li>
-				<li class="LQ audiosource" data-src="http://mp3.live.tv-radio.com/fbidf/all/fbidf-32k.mp3">France Bleu Ile-de-France (LQ)</li>
+				<li class="HQ audiosource" data-src="http://audio.scdn.arkena.com/11719/fb1071-midfi128.mp3">France Bleu Ile-de-France (HQ)</li>
+				<li class="LQ audiosource" data-src="http://audio.scdn.arkena.com/11718/fb1071-lofi32.mp3">France Bleu Ile-de-France (LQ)</li>
 			</ul>
 		</div>
 	</div>
